# comfyui_simplePromptManage

./: .gitignore  CHANGELOG.md  COMPLETION_REPORT.md  LICENSE  QUICK_REFERENCE.md  README.en.md  README.md  __init__.py  civitai_client.py  download_images.py  lora_update_service.py  pyproject.toml  requirements.txt
data/: prompts.json  prompts_default.json  prompts_default_en.json
downloadScripts/: download_by_civitaiwebnum.py  download_lora_images.py
prompt_example/: LLM_analyze_prompt.md  extract_and_analyze_prompts.py  remove_broken_images.py  selected_img_list.txt  workflow2js.py
prompt_reader/: README.md  app.py  extract_metadata.py  index.html
prompt_reader/static/: app.js  style.css
web/: index.html  llm-templates.json  script.js  style.css  top_menu_extension.js  translations.json
